--- a/views/book.html
+++ b/views/book.html
@@ -22,7 +22,7 @@
 </h1>
 
         <p1> 
-            Click on this link and book me for an hour, a day or a year. 
+            Click on this link and book me for an hour *wink*  
 
         </p1>
 </body>
