--- a/views/login.html
+++ b/views/login.html
@@ -17,37 +17,12 @@
 		</ul>
         </div>
 
-        <div class="calendar">
-                <div class="calendar-header">
-                  <h1>Month</h1>
-                  <p1>Year</p1>
-                </div>
-                <div class="calendar-body">
-                  <table>
-                    <thead>
-                      <tr>
-                        <th>Mon</th>
-                        <th>Tue</th>
-                        <th>Wed</th>
-                        <th>Thu</th>
-                        <th>Fri</th>
-                        <th>Sat</th>
-                        <th>Sun</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <!-- This is where the days of the month will go -->
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-
 <h1>
-     Contact The Drone Guy 
+     Drone Guy Login Page
 </h1>
 
         <p1> 
-            Use this to contact me :P
+            Please Login Here 
 
         </p1>
 </body>
