--- a/old_files/login.ejs
+++ b/old_files/login.ejs
@@ -15,15 +15,29 @@
             <li><a href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/views/book.html">Book</a></li>
             <li><a href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/views/contact_us.html">Contact</a></li>
 		</ul>
-	</div>
+        </div>
+
+        <div class="header"></div>
+
         
-<h1>
-     Book The Drone Guy 
-</h1>
+
+        <h1>
+             Drone Guy Login Page
+        </h1>
 
         <p1> 
-            Click on this link and book me for an hour, a day or a year. 
-
+            Please Login Here 
         </p1>
+
+
+        <div>
+        <form>
+        <input type="email" name="email" id="email">
+        <input type="password" name="password" id="password">
+        </form>
+        </div>
 </body>
 </html>
+
+
+
