--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About The Drone Guy</title>
+    <title>Contact The Drone Guy</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <meta name="description" content="Learn about The Drone Guy and our services.">
 </head>
@@ -9,19 +9,21 @@
     <div>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a class="active" href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a  href="/about">About</a></li>
+            <li><a class="active" href="/contact">Contact</a></li>
             <li style="float:right"><a href="/login">Book / Login</a></li>
         </ul>
     </div>
 
     <div class="header"></div>
     
-    <h1>About The Drone Guy</h1>
-    <h2>Learn About Our Services</h2>
+    <h1>Contact</h1>
+    <h2>Contact us </h2>
 
     <p>
-        Welcome to The Drone Guy, where we specialize in drone services and technology. Our mission is to provide you with the best drone solutions.
+       Email: thedroneguy@gmail.com <br>
+
+       Phone: 021 123 4567
     </p>
 </body>
 </html>
