--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,43 +1,33 @@
 <!DOCTYPE html>
 <html>
-    
 <head>
-        <title>The Drone Guy </title>
-        <link rel="stylesheet" href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/public/stylesheets/style.css">
+    <title>Book or Login to The Drone Guy</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+    <meta name="description" content="Learn about The Drone Guy and our services.">
 </head>
-    
-
 <body>
     <div>
-		<ul>
-            <li><a href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/home.html">Home</a></li>
-            <li><a href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/views/about.html">About</a></li>
-            <li><a href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/views/book.html">Book</a></li>
-            <li><a href="C:/Users/Matt_Park_Pavilion/Documents/Future Skills/Final Project/The_Drone_Guy/views/contact_us.html">Contact</a></li>
-		</ul>
-        </div>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li style="float:right"><a class="active"a href="/login">Book / Login</a></li>
+        </ul>
+    </div>
 
-        <div class="header"></div>
+    <div class="header"></div>
+    
+    <h1>Login / booking Page </h1>
+    <h2>Please login here</h2>
 
-        
-
-        <h1>
-             Drone Guy Login Page
-        </h1>
-
-        <p1> 
-            Please Login Here 
-        </p1>
-
-
-        <div>
+    <div> 
         <form>
-        <input type="email" name="email" id="email">
-        <input type="password" name="password" id="password">
+            <input type="email" name="email" id="email">
+            <br>
+            <input type="password" name="password" id="password">
+            <input type="submit">
         </form>
-        </div>
+    </div>
+
 </body>
 </html>
-
-
-
