--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html>
-    
 <head>
-        <title>The Drone Guy </title>
-        <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    <title>The Drone Guy</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
-    
 <body>
-
-<div>
+    <div>
         <ul>
-            <li><a class = "active" a href="home.html">Home</a></li>
-            <li><a href="../views/about.ejs">About</a></li>
-            <li><a href="book.html">Book</a></li>
-            <li><a href="contact_us.html">Contact</a></li>
-            <li style="float:right"><a href="login.html">Login</a></li>
-	</ul>
-</div>
+            <li><a class="active"a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li style="float:right"><a href="/login">Book / Login</a></li>
+        </ul>
+    </div>
 
-<div class="header"></div>
-        
-<h1>
-This is the Drone Guy      
-</h1>
+    <div class="header"></div>
+    
+    <h1>The Drone Guy</h1>
+    <h2>Your Source for Drone Services</h2>
 
-<h2> This is a second heading</h2>
-
-<p> 
-            Hi! I'm the drone guy. 
-
-            I'm Matt, I fly drones, its pretty neat.
-
-            You should fly drones too! 
-
-</p>
+    <p>
+        Welcome to The Drone Guy. I'm Matt, your drone expert. Let's explore the world of drones together!
+    </p>
 </body>
 </html>
