--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,22 +10,27 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a class="active"a href="/login">Book / Login</a></li>
+            <li style="float:right"><a class="active"a href="/login">Login</a></li>
         </ul>
     </div>
 
     <div class="header"></div>
     
-    <h1>Login / booking Page </h1>
+    <h1>Login Page </h1>
     <h2>Please login here</h2>
 
     <div> 
         <form>
-            <input type="email" name="email" id="email">
+            
+            <input type="email" name="email" id="email" default="email">
+
             <br>
             <input type="password" name="password" id="password">
-            <input type="submit">
+            <br>
+            <input type="submit">   
         </form>
     </div>
 
