--- a/views/services.ejs
+++ b/views/services.ejs
@@ -9,8 +9,8 @@
     <div>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a class="active" href="/about">About</a></li>
-            <li><a href="/services">Services</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a class="active"href="/services">Services</a></li>
             <li><a href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/login">Login</a></li>
@@ -19,9 +19,11 @@
 
     <div class="header"></div>
     
-    <h1>About The Drone Guy</h1>
-    <h2>Learn About me</h2>
+    <h1>The Drone Guy's Services </h1>
+    <h2>Learn About Our Services</h2>
 
-
+    <p>
+        Welcome to The Drone Guy, where we specialize in drone services and technology. Our mission is to provide you with the best drone solutions.
+    </p>
 </body>
 </html>
