--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,8 +10,10 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a  href="/about">About</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/book">Book</a></li>
             <li><a class="active" href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/login">Book / Login</a></li>
+            <li style="float:right"><a href="/login">Login</a></li>
         </ul>
     </div>
 
