--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,8 +9,10 @@
         <ul>
             <li><a class="active"a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/login">Book / Login</a></li>
+            <li style="float:right"><a href="/login">Login</a></li>
         </ul>
     </div>
 
