--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,7 @@
             <li><a href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/login">Login</a></li>
+            <li style="float:right"><a href="/users_view">Users_View</a></li>
         </ul>
     </div>
 
