--- a/views/user_logout.ejs
+++ b/views/user_logout.ejs
@@ -10,16 +10,19 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
-            <li><a class="active"href="/services">Services</a></li>
+            <li><a href="/services">Services</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/login">Login</a></li>
-            <li style="float:right"><a href="/register">Register</a></li>
+            <li style="float:right"><a href="/logout">Logout</a></li>
+            <li style="float:right"><a href="/book">Book</a></li>
+            <li style="float:right"><a class = "active" href="/user_landing">Profile</a></li>
+
+
         </ul>
     </div>
 
     <div class="header"></div>
     
-    <h1>The Drone Guy's Services </h1>
+    <h1>About The Drone Guy</h1>
     <h2>Learn About Our Services</h2>
 
     <p>
