--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,9 +11,9 @@
             <li><a href="/">Home</a></li>
             <li><a class="active" href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
-            <li><a href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/login">Login</a></li>
+            <li style="float:right"><a href="/register">Register</a></li>
         </ul>
     </div>
 
