--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,13 @@
 <body>
     <div>
         <ul>
-            <li><a class="active"a href="/">Home</a></li>
+            <li><a class="active" href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
-            <li><a href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/login">Login</a></li>
-            <li style="float:right"><a href="/users_view">Users_View</a></li>
+            <li style="float:right"><a href="/register">Register</a></li>
+
         </ul>
     </div>
 
