--- a/views/login_failure.ejs
+++ b/views/login_failure.ejs
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Contact The Drone Guy</title>
+    <title>Login Failed</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
-    <meta name="description" content="Learn about The Drone Guy and our services.">
+    <meta name="description" content="Registration Success">
 </head>
 <body>
     <div>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a  href="/about">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
-            <li><a class="active" href="/contact">Contact</a></li>
+            <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/login">Login</a></li>
             <li style="float:right"><a href="/register">Register</a></li>
-            
         </ul>
     </div>
 
     <div class="header"></div>
+
+    <h1>Login Failed</h1>
     
-    <h1>Contact</h1>
-    <h2>Contact us </h2>
+    <p>Sorry, that email or password is not in our system. Please check your email or password and try again, or contact us. </p>
 
-    <p>
-       Email: thedroneguy@gmail.com <br>
 
-       Phone: 021 123 4567
-    </p>
 </body>
 </html>
