--- a/views/user_landing.ejs
+++ b/views/user_landing.ejs
@@ -11,9 +11,13 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/services">Services</a></li>
-            <li><a class="active" href="/book">Book</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li style="float:right"><a href="/login">Login</a></li>
+            <li style="float:right"><a href="/logout">Logout</a></li>
+            <li style="float:right"><a href="/user_book">Book</a></li>
+            <li style="float:right"><a class = "active" href="/user_landing">Profile</a></li>
+            <li style="float:right"><a href="/user_view">Users View</a></li>
+
+
         </ul>
     </div>
 
