Update from 30 October

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,6 +159,35 @@ form {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    background-color: #14608b;
     color: white;
   }
+
+    /* admin table style*/ 
+
+    #booking {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      position: middle;
+      width: 75%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    
+    #booking td, #booking th {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+    
+    #booking tr:nth-child(even){background-color: #f2f2f2;}
+    
+    #booking tr:hover {background-color: #ddd;}
+    
+    #booking th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #14608b;
+      color: white;
+    }
+  
