Login Security and Admin_book
Added the code needed to make sure the admin and user pages were secure.

Began the work on the booking system, after making several changes to both the app and server I got the admin_book page posting to the database.

--- a/views/admin/admin_landing.ejs
+++ b/views/admin/admin_landing.ejs
@@ -13,9 +13,9 @@
             <li><a href="/services">Services</a></li>
             <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/logout">Logout</a></li>
-            <li style="float:right"><a href="/user_book">Book</a></li>
-            <li style="float:right"><a class = "active" href="/user_landing">Profile</a></li>
-            <li style="float:right"><a href="/user_view">Users View</a></li>
+            <li style="float:right"><a href="/admin/admin_book">Admin Book</a></li>
+            <li style="float:right"><a class = "active" href="/admin_landing">Admin Profile</a></li>
+            <li style="float:right"><a href="/admin/admin_users">Admin Users</a></li>
 
 
         </ul>
@@ -23,7 +23,7 @@
 
     <div class="header"></div>
     
-    <h1>User Landing Page</h1>
+    <h1>ADMIN LANDING</h1>
    
 
     
