--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,6 +82,24 @@ form {
     border: 1px solid #ccc;
     box-sizing: border-box;
   }
+
+  input[type=date], input[type=date] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+  input[type=time], input[type=time] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
   
   /* Set a style for all buttons */
   button {
