--- a/views/admin/admin_users.ejs
+++ b/views/admin/admin_users.ejs
@@ -13,9 +13,9 @@
             <li><a href="/services">Services</a></li>
             <li><a href="/contact">Contact</a></li>
             <li style="float:right"><a href="/logout">Logout</a></li>
-            <li style="float:right"><a href="/user_book">Book</a></li>
-            <li style="float:right"><a href="/user_landing">Profile</a></li>
-            <li style="float:right"><a class = "active" href="/user_view">Users View</a></li>
+            <li style="float:right"><a href="/admin/admin_book">Admin Book</a></li>
+            <li style="float:right"><a href="/admin/admin_landing"> Admin Profile</a></li>
+            <li style="float:right"><a class = "active" href="/user_view">Admin Users</a></li>
         </ul>
     </div>
 
