--- a/views/admin/admin_users.ejs
+++ b/views/admin/admin_users.ejs
@@ -34,11 +34,11 @@
         
         <% data.forEach(function(row) { %>
             <tr>
-                <td><%= row.id %></td>
-                <td><%= row.first_name %></td>
-                <td><%= row.last_name %></td>
-                <td><%= row.email %></td>
-                <td><%= row.password %></td>
+                <td><%= row.user_id %></td>
+                <td><%= row.user_first_name %></td>
+                <td><%= row.user_last_name %></td>
+                <td><%= row.user_email %></td>
+                <td><%= row.user_password %></td>
             </tr>
         <% }); %>
 
