--- a/views/user/user_book.ejs
+++ b/views/user/user_book.ejs
@@ -26,20 +26,19 @@
     <h1>Booking Page</h1>
     <table id="booking">
         <tr>
+            <th>Booking Id</th>
             <th>Date</th>
             <th>Time</th>
             <th>Book</th>
         </tr>
         <% data.forEach(function(row) { %>
             <tr>
+                <td><%= row.booking_id %></td>
                 <td><%= row.booking_date %></td>
                 <td><%= row.booking_time %></td>
                 <td>
                     <form action="/user/book_drone" method="post">
-                        <input type="hidden" name="booking_date" value="<%= row.booking_date %>">
-                        <input type="hidden" name="booking_time" value="<%= row.booking_time %>">
-                        <input type="hidden" name="user_id" value="<%= user.user_id %>">
-                        <input type="hidden" name="booking_status" value="booked">
+                        <input type="hidden" name="booking_id" value="<%= row.booking_id %>">
                         <button type="submit">Book</button>
                     </form>
                 </td>
