--- a/views/admin/admin_users.ejs
+++ b/views/admin/admin_users.ejs
@@ -15,7 +15,7 @@
             <li style="float:right"><a href="/logout">Logout</a></li>
             <li style="float:right"><a href="/admin/admin_book">Admin Book</a></li>
             <li style="float:right"><a href="/admin/admin_landing"> Admin Profile</a></li>
-            <li style="float:right"><a class = "active" href="/user_view">Admin Users</a></li>
+            <li style="float:right"><a class = "active" href="/admin/admin_users">Admin Users</a></li>
         </ul>
     </div>
 
