--- a/views/admin/admin_landing.ejs
+++ b/views/admin/admin_landing.ejs
@@ -3,7 +3,45 @@
 <head>
     <title>About The Drone Guy</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about The Drone Guy and our services.">
+
+    <style>
+        ul-1 {
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; 
+    margin:auto
+}
+      
+li {
+    float: left;
+}
+
+li a:hover {
+    background-color: #555;
+    color: lightblue;
+  }
+
+.active {
+    background-color: white;
+    background-color: #555;
+  }
+      
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
+    </style>
+
 </head>
 <body>
     <div>
@@ -23,9 +61,33 @@
 
     <div class="header"></div>
     
-    <h1>ADMIN LANDING</h1>
-   
+<!-- Admin Book Section -->
+<section id="adminBook">
+    <h2>Admin Book</h2>
+    <p>Welcome to the Admin Book page! Here, you can manage all bookings in the system.</p>
 
-    
+    <!-- Functions -->
+    <ul>
+        <li>View All Bookings - Easily navigate through a comprehensive list of all bookings in the system.</li>
+        <li>Edit Bookings - Make changes to a booking seamlessly to ensure accurate information.</li>
+        <li>Delete Bookings - Remove outdated or canceled reservations effortlessly.</li>
+        <li>Create Bookings - Initiate new bookings with ease.</li>
+    </ul>
+</section>
+
+<!-- Admin Users Section -->
+<section id="adminUsers">
+    <h2>Admin Users</h2>
+    <p>Welcome to the Admin Users page! This is your central hub for managing all user-related activities within the system.</p>
+
+    <ul>
+        <li>View All Users - Access a comprehensive list of all users in the system.</li>
+        <li>Edit Details - Update user information to ensure accuracy and relevance.</li>
+        <li>Delete Users - Manage user accounts effortlessly.</li>
+        <li>User Activity Tracking - Stay informed about user activities for better system security.</li>
+    </ul>
+</section>
+
+
 </body>
 </html>
