--- a/views/user/user_book.ejs
+++ b/views/user/user_book.ejs
@@ -24,7 +24,7 @@
     <div class="header"></div>
 
     <h1>Booking Page</h1>
-    <table id="booking">
+    <table id="standard">
         <tr>
             <th>Booking Id</th>
             <th>Date</th>
