--- a/views/admin/admin_users.ejs
+++ b/views/admin/admin_users.ejs
@@ -23,13 +23,14 @@
     
     <h1>Users Page</h1>
     
-    <table id = "users">
+    <table id = "standard">
 		<tr>
             <th>Id</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
             <th>Password</th>
+            <th>Delete</th>
         </tr>
         
         <% data.forEach(function(row) { %>
@@ -39,9 +40,44 @@
                 <td><%= row.user_last_name %></td>
                 <td><%= row.user_email %></td>
                 <td><%= row.user_password %></td>
+                <td>
+                    <form action="/admin/delete-user" method="post">
+                        <input type="hidden" name="user_id" value="<%= row.user_id %>">
+                        <button class="delete-button" data-user-id="<%= row.user_id %>">Delete</button>
+                    </form>                
+                </td>
             </tr>
         <% }); %>
 
     </table>    
+
+    <div class="forms-container">
+        <div class="form-container">
+            <h2>Edit a user</h2>
+            <form action="/admin/edit-user" method="post">
+                <div class="container">
+                    <label for="user_id"><b>User Id</b></label>
+                    <input type="number" placeholder="Select the User Id" name="user_id" required>
+            
+                    <label for="user_first_name"><b>First Name</b></label>
+                    <input type="text" placeholder="Edit the First Name" name="user_first_name" required>
+                    
+                    <label for="user_last_name"><b>Last Name</b></label>
+                    <input type="text" placeholder="Edit the Last Name" name="user_last_name" required>
+                    
+                    <label for="user_email"><b>User Email</b></label>
+                    <input type="text" placeholder="Edit the Email Address" name="user_email" required>
+
+                    <label for="user_type"><b>User Type</b></label>
+                    <select name="user_type" required>
+                        <option value="admin">Admin</option>
+                        <option value="user">User</option>
+                        </select>
+                    
+                        <button type="submit">Update Booking</button>
+                    </div>
+                </form> 
+        </div>
+
 </body>
 </html>
