--- a/views/user/user_landing.ejs
+++ b/views/user/user_landing.ejs
@@ -24,9 +24,33 @@
 
     <h1>User Landing Page</h1>
 
-    <h1>User Details</h1>
-    <table id="profile">
-        <!-- Display user details -->
+    <h2>Your Bookings</h2>
+    <table id="standard">
+        <tr>
+            <th>Booking Id</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th>Cancel</th>
+        </tr>
+        <% data.forEach(function(row) { %>
+            <tr>
+                <td><%= row.booking_id %></td>
+                <td><%= new Intl.DateTimeFormat('en-US', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' }).format(new Date(row.booking_date)) %></td>
+                <td><%= new Intl.DateTimeFormat('en-US', { hour: 'numeric', minute: 'numeric', hour12: true }).format(new Date('2023-01-01T' + row.booking_time)) %></td>
+                <td>
+                    <form action="/user/cancel-booking" method="post">
+                        <input type="hidden" name="booking_id" value="<%= row.booking_id %>">
+                        <button class="delete-button" data-booking-id="<%= row.booking_id %>">Cancel</button>
+                    </form>                
+                </td>
+            </tr>
+        <% }); %>
+    </table>
+
+    
+    <h2>Your Details</h2>
+    <table id="standard">
+        
         <tr>
             <th>User ID</th>
             <th>First Name</th>
@@ -38,8 +62,32 @@
             <td><%= user.user_first_name %></td>
             <td><%= user.user_last_name %></td>
             <td><%= user.user_email %></td>
+            
         </tr>
     </table>
+
+    <div class="forms-container">
+        <div class="form-container">
+            <h2>Edit Your Details</h2>
+            <form action="/user/edit-user" method="post">
+                <div class="container">            
+                    <label for="user_first_name"><b>First Name</b></label>
+                    <input type="text" placeholder="Edit the First Name" name="user_first_name">
+                    
+                    <label for="user_last_name"><b>Last Name</b></label>
+                    <input type="text" placeholder="Edit the Last Name" name="user_last_name">
+                    
+                    <label for="user_email"><b>Email</b></label>
+                    <input type="text" placeholder="Edit your Email Address" name="user_email">
+
+                    <label for="user_password"><b>Password</b></label>
+                    <input type="text" placeholder="Edit your Password" name="user_password">
+                    
+                        <button type="submit">Update Details</button>
+                    </div>
+                </form> 
+        </div>
+
 
 </body>
 
